CMS GC saved the day for brutos