@@ -9,6 +9,7 @@
  		 [org.clojure/tools.nrepl "0.2.2"]
  		 [org.clojure/math.combinatorics "0.0.4"]
  		 [org.clojure/core.memoize "0.5.5"]
+ 		 [org.clojure/data.priority-map "0.0.2"]
  		 [javax.mail/mail "1.4.3"]
  		 ;[weissjeffm/clojure.prxml "1.3.0-SNAPSHOT"]
                  ;[org.clojure/tools.cli "0.2.2"]
@@ -34,13 +35,15 @@
                  [jgraph/jgraph "5.13.0.0"]
                  [org.flatland/ordered "1.5.1"]
                  [instaparse "1.1.0"]
+                 [incanter "1.5.1"]
                  ]
   :jvm-opts ^:replace 
             ["-Xmx3g" "-server"  ;;ideally need 3GB for stanford-corenlp
              "-XX:+OptimizeStringConcat" 
              "-XX:-UseCompressedOops" 
              "-XX:+UseStringCache"
-             ;"-XX:+UseParallelGC" "-XX:+UseParallelOldGC" "-XX:+DoEscapeAnalysis"
+             "-XX:+UseConcMarkSweepGC"
+             "-XX:+DoEscapeAnalysis"
              ;"-DWNSEARCHDIR=/home/dimitris/WordNet-3.0/dict/" ;;need this for jwnl.jar and opennlp-coref
             ]
   ;:jar-name           ; name of the jar produced by 'lein jar'
